css/style.css
* {
  font-family: 'Titillium Web', sans-serif;
}
body {
  margin: 0;
  background-image: url("../img/bg.jpg");
  background-attachment:fixed;
  background-position: right bottom; /*Positioning*/
  background-repeat: no-repeat; /*Prevent showing multiple background images*/
  background-color: #1c3261;
  background-size: cover;
  width: 100%;
  height: 100%;
}
.mm-custom h1, .mm-custom h2, .mm-custom h3, .mm-custom h4, .mm-custom h5, .mm-custom h6 {
  font-weight: 700;
  line-height: 1.429;
}
.mm-custom h1, .mm-custom h2, .mm-custom h3, .mm-custom h4, .mm-custom h5, .mm-custom h6, .mm-custom p, .mm-custom a {
  color: cornsilk;
  text-shadow: 0.3vmin 0.3vmin 1vmin #000;
}
.mm-custom h2 {
  font-size: 10vmin;
  margin: 5vmin;
}
.mm-custom p {
  font-weight: 200;
}
.mm-custom a {
  text-decoration: none;
}
/* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
.flex {
  display: flex;
  flex-wrap: wrap;
  flex-flow: row-wrap;
}
.flex--tall {
  min-height: 100%;
  min-width: 100%;
}
.flex--align-center {
  align-items: center;
  justify-content: center;
}
.flex--column {
  flex-direction: column;
}
.flex--align-bottom {
  margin-top: auto;
  align-self: center;
}
.paragraph {
  font-size: 9vmin;
  margin: 0 5vmin 0 5vmin;
  margin-left: 5vmin;
  margin-right: 5vmin;
}
.data-item {
  font-size: 8vmin;
  margin-left: 4vmin;
  margin-right: 4vmin;
}
.arrow {
  margin-bottom: 1.5rem;
}
.footer {
  margin-top: 10rem;
  margin-bottom: 1rem;
}
.card-img {
  width: 100%;
  height: 10rem;
  overflow: hidden;
  background: rebeccapurple;
}
.card-img img {
  width: 100%;
}
.mui-btn.mui-btn--fab {
  font-size: 1.8rem;
}

